--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "require_lifetimes"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 authors = ["Tom Kunc <tom@tfpk.dev>"]
 license = "MIT OR Apache-2.0"
@@ -15,6 +15,7 @@ proc_macro = true
 
 [dependencies]
 syn = { version = "1.0.107", features=["full", "extra-traits", "visit"] }
+quote = "1.0.12"
 proc-macro2 = "1.0.49"
 
 [dev-dependencies]
